[Fixes: #32913781] Various Chart Fixes and Enhancements
- Adjust the CSS so the Legend Values don't wrap when there are spaces
- Remove a div from the chart template to fix how it looks when they template is squished
- Fix the labels when the data is grouped by Include In Forecast
- Set the do_round to be 0 in the Individual base report
- Updated SugarCharts.js to have one global method for created the Legends()
- Have the legend update when the data is refreshed
- Fixed the chart.js to have it load the chart on the initial load.

--- a/sugarcrm/themes/default/less/charts.less
+++ b/sugarcrm/themes/default/less/charts.less
@@ -55,6 +55,8 @@ text-align: left;
     color: @grayDarker;
     text-shadow: none;
     font-size: 12px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .legend table td.label:hover {
